fix card title spacing

--- a/style.css
+++ b/style.css
@@ -661,7 +661,7 @@ section {
 
 .projects-card_title {
   font-size: 32px;
-  width: fit-content;
+  text-align: center;
   font-family: 'Anton', sans-serif;
   padding: 1rem;
 }
@@ -671,6 +671,7 @@ section {
   font-weight: 700;
   font-size: 18px;
   font-style: italic;
+  text-align: center;
 }
 
 #more-icon {
